--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -6,7 +6,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="#FAFAFA"
 android:padding="15dp"
-tools:context=".phoneNumber">
+tools:context=".PhoneNumberActivity">
 
 <ImageView
     android:id="@+id/imageView"
@@ -79,7 +79,7 @@ tools:context=".phoneNumber">
             android:padding="10dp" />
 
         <Button
-            android:id="@+id/continueBtn"
+            android:id="@+id/btnContinue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Continue" />
