--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#E8E3E3</color>
     <color name="green">#4CAF50</color>
+    <color name="purpleDark">#FF4A2757</color>
+    <color name="purpleDarkLight">#6A3B83</color>
 </resources>
